# workspace-architect

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  env.py  schemas.py
